feat: add always on display mode setup

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "wipeColor": "",
         "defaultLanguage": "en-US",
         "requestedPermissions": [
+            "access_aod",
             "access_activity",
-            "access_heart_rate",
-            "access_user_profile"
+            "access_heart_rate"
         ],
         "buildTargets": [
             "higgs",
